<resources>
    <string name="app_name">My Application00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ko_o_fortuny">Koło Fortuny</string>
    <string name="start">Start</string>
    <string name="kategoria">Kategoria</string>
    <string name="word">word</string>
    <string name="zakr">zakręć</string>
    <string name="zatwierd">zatwierdź</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="p">p</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="z">z</string>
    <string name="zgadnij">zgadnij hasło</string>
    <string name="dodaj_nowe_slowo">dodaj nowe słowo</string>
    <string name="dodaj">podaj nowe słowo</string>
    <string name="podaj_kategori">podaj kategorię</string>
    <string name="podaj_nowe_s_owo">podaj nowe słowo</string>
    <string name="stan_konta_0">Stan konta: 0$</string>
    <string name="runda_1">Runda 1</string>
    <string name="sparuj_urz_dzenie">Sparuj urządzenie!</string>
    <string name="szukaj_urz_dze">szukaj urządzeń</string>
</resources>